--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -104,8 +104,8 @@ services:
     tty: true
     devices:
       - /dev/hidraw3:/dev/hidraw3
-      - /dev/hidraw4:/dev/hidraw4
-      #- /dev/hidraw5:/dev/hidraw5
+      #- /dev/hidraw4:/dev/hidraw4
+      # /dev/hidraw5:/dev/hidraw5
 
   # This service adds a ROS2 Humble
   # installation on top of the base image
@@ -138,6 +138,35 @@ services:
      # - /dev/hidraw4:/dev/hidraw4
       #- /dev/hidraw5:/dev/hidraw5
     
+  isaac-lab-harry:
+    profiles: [ "harry" ]
+    env_file:
+      - .env.base
+    build:
+      context: ../
+      dockerfile: docker/Dockerfile.base
+      args:
+        # ROS2_APT_PACKAGE will default to NONE. This is to
+        # avoid a warning message when building only the base profile
+        # with the .env.base file
+        - ROS2_APT_PACKAGE=${ROS2_APT_PACKAGE:-NONE}
+    image: isaac-lab-harry
+    container_name: isaac-lab-harry
+    environment: *default-isaac-lab-environment
+    volumes: *default-isaac-lab-volumes
+    network_mode: host
+    deploy: *default-isaac-lab-deploy
+    # This is the entrypoint for the container
+    entrypoint: bash
+    stdin_open: true
+    tty: true
+    devices:
+      #- /dev/hidraw4:/dev/hidraw4
+      - /dev/hidraw3:/dev/hidraw3
+     # - /dev/hidraw4:/dev/hidraw4
+      #- /dev/hidraw5:/dev/hidraw5
+    
+
   isaac-lab-ros2_mod:
     profiles: [ "ros2_mod" ]
     env_file:
