--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,8 @@
 [project]
-name = "isaaclab-suite"
+name = "isaaclab"
 version = "0.1.0"
-description = "Unified IsaacLab + extensions + custom IsaacChills"
-authors = [{ name = "Your Name", email = "you@example.com" }]
+description = "Unified IsaacLab repo (assets, tasks, RL, mimic)"
 readme = "README.md"
-license = { text = "BSD-3-Clause" }
 requires-python = ">=3.10"
 dependencies = [
   "torch==2.5.1",
@@ -12,10 +10,36 @@ dependencies = [
   "gymnasium>=0.29",
   "numpy>=1.24",
   "isaacsim[all,extscache]==4.5.0"
+  "onnx==1.16.1",
+  "prettytable==3.3.0",
+  "toml",
+  "hidapi==0.14.0.post2",
+  "trimesh",
+  "pyglet<2",
+  "transformers",
+  "einops",
+  "warp-lang",
+  "pillow==11.0.0",
+  "starlette==0.45.3",
+  "junitparser",
+  "flatdict==4.0.1",
+  "tensorboard",
+  "scikit-learn",
+  "numba",
+  "protobuf>=3.20.2,!=5.26.0", 
+  "hydra-core",
+  "h5py",
+  "moviepy",
+  "ipywidgets==8.1.5"
 ]
 
 [project.optional-dependencies]
-dev = ["pytest", "black", "ruff", "mypy"]
+dev = [
+  "pytest",
+  "black",
+  "ruff",
+  "mypy"
+]
 
 [build-system]
 requires = ["setuptools>=67", "wheel"]
@@ -23,10 +47,14 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 package-dir = { "" = "source" }
-
-[tool.setuptools.packages.find]
-where = ["source"]
-include = ["isaaclab*", "IsaacChills"]
+packages = [
+  "isaaclab",
+  "isaaclab_assets",
+  "isaaclab_tasks",
+  "isaaclab_mimic",
+  "isaaclab_rl",
+  "chills"
+]
 
 [tool.pytest.ini_options]
 testpaths = ["tools/tests"]
@@ -37,10 +65,6 @@ line-length = 88
 
 [tool.ruff]
 line-length = 88
-
-[tool.flake8]
-max-line-length = 88
-extend-ignore = ["E203", "W503"]
 
 [tool.mypy]
 strict = true
