--- a/.meta/docker/docker-compose.yaml
+++ b/.meta/docker/docker-compose.yaml
@@ -40,9 +40,9 @@ x-default-isaac-lab-volumes: &default-isaac-lab-volumes
   - type: bind
     source: ../scripts
     target: ${DOCKER_ISAACLAB_PATH}/scripts
-  - type: bind
-    source: ../docs
-    target: ${DOCKER_ISAACLAB_PATH}/docs
+  # - type: bind
+  #   source: ../docs
+  #   target: ${DOCKER_ISAACLAB_PATH}/docs
   - type: bind
     source: ../tools
     target: ${DOCKER_ISAACLAB_PATH}/tools
@@ -101,6 +101,32 @@ services:
     entrypoint: bash
     stdin_open: true
     tty: true
+
+  # custom docker *harry
+  isaac-lab-harry:
+  profiles: [ "harry" ]
+    env_file:
+      - .env.base
+      - .env.harry
+  build:
+    context: ../
+    dockerfile: docker/Dockerfile.harry
+    args:
+      - ISAACSIM_BASE_IMAGE_ARG=${ISAACSIM_BASE_IMAGE}
+      - ISAACSIM_VERSION_ARG=${ISAACSIM_VERSION}
+      - ISAACSIM_ROOT_PATH_ARG=${DOCKER_ISAACSIM_ROOT_PATH}
+      - ISAACLAB_PATH_ARG=${DOCKER_ISAACLAB_PATH}
+      - DOCKER_USER_HOME_ARG=${DOCKER_USER_HOME}
+  image: isaac-lab-harry${DOCKER_NAME_SUFFIX-}
+  container_name: isaac-lab-harry${DOCKER_NAME_SUFFIX-}
+  environment: *default-isaac-lab-environment
+  volumes: *default-isaac-lab-volumes
+  network_mode: host
+  deploy: *default-isaac-lab-deploy
+  # This is the entrypoint for the container
+  entrypoint: bash
+  stdin_open: true
+  tty: true
 
   # This service adds a ROS2 Humble
   # installation on top of the base image
