--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -102,10 +102,7 @@ services:
     entrypoint: bash
     stdin_open: true
     tty: true
-    devices:
-      - /dev/hidraw3:/dev/hidraw3
-      - /dev/hidraw4:/dev/hidraw4
-      # /dev/hidraw5:/dev/hidraw5
+    
 
   # This service adds a ROS2 Humble
   # installation on top of the base image
@@ -120,7 +117,7 @@ services:
       args:
         # ROS2_APT_PACKAGE will default to NONE. This is to
         # avoid a warning message when building only the base profile
-        # with the .env.base file
+        # with the .env.base file``````
         - ROS2_APT_PACKAGE=${ROS2_APT_PACKAGE:-NONE}
     image: isaac-lab-ros2
     container_name: isaac-lab-ros2
@@ -132,11 +129,7 @@ services:
     entrypoint: bash
     stdin_open: true
     tty: true
-    devices:
-      - /dev/hidraw4:/dev/hidraw4
-      - /dev/hidraw3:/dev/hidraw3
-     # - /dev/hidraw4:/dev/hidraw4
-      #- /dev/hidraw5:/dev/hidraw5
+
     
 
 
