--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,10 +1,5 @@
-# Here we set the parts that would
-# be re-used between services to an
-# extension field
-# https://docs.docker.com/compose/compose-file/compose-file-v3/#extension-fields
+
 x-default-isaac-lab-volumes: &default-isaac-lab-volumes
-  # These volumes follow from this page
-  # https://docs.omniverse.nvidia.com/app_isaacsim/app_isaacsim/install_faq.html#save-isaac-sim-configs-on-local-disk
   - type: volume
     source: isaac-cache-kit
     target: ${DOCKER_ISAACSIM_ROOT_PATH}/kit/cache
@@ -32,25 +27,18 @@ x-default-isaac-lab-volumes: &default-isaac-lab-volumes
   - type: volume
     source: isaac-docs
     target: ${DOCKER_USER_HOME}/Documents
-    # This overlay allows changes on the local files to
-    # be reflected within the container immediately
   - type: bind
     source: ../source
     target: ${DOCKER_ISAACLAB_PATH}/source
   - type: bind
     source: ../scripts
     target: ${DOCKER_ISAACLAB_PATH}/scripts
-  # - type: bind
-  #   source: ../docs
-  #   target: ${DOCKER_ISAACLAB_PATH}/docs
+  - type: bind
+    source: ../docs
+    target: ${DOCKER_ISAACLAB_PATH}/docs
   - type: bind
     source: ../tools
     target: ${DOCKER_ISAACLAB_PATH}/tools
-    # The effect of these volumes is twofold:
-    # 1. Prevent root-owned files from flooding the _build and logs dir
-    #    on the host machine
-    # 2. Preserve the artifacts in persistent volumes for later copying
-    #    to the host machine
   - type: volume
     source: isaac-lab-docs
     target: ${DOCKER_ISAACLAB_PATH}/docs/_build
@@ -60,10 +48,10 @@ x-default-isaac-lab-volumes: &default-isaac-lab-volumes
   - type: volume
     source: isaac-lab-data
     target: ${DOCKER_ISAACLAB_PATH}/data_storage
-    # This volume is used to store the history of the bash shell
   - type: bind
-    source: .isaac-lab-docker-history
-    target: ${DOCKER_USER_HOME}/.bash_history
+    source: /usr/share/nvidia/nvoptix.bin
+    target: /usr/share/nvidia/nvoptix.bin
+    read_only: true
 
 x-default-isaac-lab-environment: &default-isaac-lab-environment
   - ISAACSIM_PATH=${DOCKER_ISAACLAB_PATH}/_isaac_sim
@@ -78,7 +66,6 @@ x-default-isaac-lab-deploy: &default-isaac-lab-deploy
           capabilities: [ gpu ]
 
 services:
-  # This service is the base Isaac Lab image
   isaac-lab-base:
     profiles: [ "base" ]
     env_file: .env.base
@@ -91,8 +78,8 @@ services:
         - ISAACSIM_ROOT_PATH_ARG=${DOCKER_ISAACSIM_ROOT_PATH}
         - ISAACLAB_PATH_ARG=${DOCKER_ISAACLAB_PATH}
         - DOCKER_USER_HOME_ARG=${DOCKER_USER_HOME}
-    image: isaac-lab-base${DOCKER_NAME_SUFFIX-}
-    container_name: isaac-lab-base${DOCKER_NAME_SUFFIX-}
+    image: isaac-lab-base
+    container_name: isaac-lab-base
     environment: *default-isaac-lab-environment
     volumes: *default-isaac-lab-volumes
     network_mode: host
@@ -101,34 +88,10 @@ services:
     entrypoint: bash
     stdin_open: true
     tty: true
+    devices:
+      - /dev/hidraw3:/dev/hidraw3
 
-  # custom docker *harry
-  isaac-lab-harry:
-    profiles: [ "harry" ]
-    env_file:
-      - .env.base
-      - .env.harry
-    build:
-      context: ../
-      dockerfile: docker/Dockerfile.harry
-      args:
-        - ISAACSIM_BASE_IMAGE_ARG=${ISAACSIM_BASE_IMAGE}
-        - ISAACSIM_VERSION_ARG=${ISAACSIM_VERSION}
-        - ISAACSIM_ROOT_PATH_ARG=${DOCKER_ISAACSIM_ROOT_PATH}
-        - ISAACLAB_PATH_ARG=${DOCKER_ISAACLAB_PATH}
-        - DOCKER_USER_HOME_ARG=${DOCKER_USER_HOME}
-    image: isaac-lab-harry${DOCKER_NAME_SUFFIX-}
-    container_name: isaac-lab-harry${DOCKER_NAME_SUFFIX-}
-    environment: *default-isaac-lab-environment
-    volumes: *default-isaac-lab-volumes
-    network_mode: host
-    deploy: *default-isaac-lab-deploy
-    entrypoint: bash
-    stdin_open: true
-    tty: true
 
-  # This service adds a ROS2 Humble
-  # installation on top of the base image
   isaac-lab-ros2:
     profiles: [ "ros2" ]
     env_file:
@@ -138,26 +101,42 @@ services:
       context: ../
       dockerfile: docker/Dockerfile.ros2
       args:
-        # ROS2_APT_PACKAGE will default to NONE. This is to
-        # avoid a warning message when building only the base profile
-        # with the .env.base file
         - ROS2_APT_PACKAGE=${ROS2_APT_PACKAGE:-NONE}
-        # Make sure that the correct Docker Name Suffix is being passed to the dockerfile, to know which base image to
-        # start from.
-        - DOCKER_NAME_SUFFIX=${DOCKER_NAME_SUFFIX-}
-    image: isaac-lab-ros2${DOCKER_NAME_SUFFIX-}
-    container_name: isaac-lab-ros2${DOCKER_NAME_SUFFIX-}
+    image: isaac-lab-ros2
+    container_name: isaac-lab-ros2
     environment: *default-isaac-lab-environment
     volumes: *default-isaac-lab-volumes
     network_mode: host
     deploy: *default-isaac-lab-deploy
-    # This is the entrypoint for the container
+    entrypoint: bash
+    stdin_open: true
+    tty: true
+    devices:
+      - /dev/hidraw3:/dev/hidraw3
+
+    
+  isaac-lab-harry:
+    profiles: [ "harry" ]
+    env_file:
+      - .env.base
+      - .env.harry
+    build:
+      context: ../
+      dockerfile: docker/Dockerfile.harry
+      args:
+      - ISAACLAB_PATH_ARG=${DOCKER_ISAACLAB_PATH}
+      - DOCKER_USER_HOME_ARG=${DOCKER_USER_HOME}
+    image: isaac_container
+    container_name: isaac-lab-harry
+    environment: *default-isaac-lab-environment
+    volumes: *default-isaac-lab-volumes
+    network_mode: host
+    deploy: *default-isaac-lab-deploy
     entrypoint: bash
     stdin_open: true
     tty: true
 
 volumes:
-  # isaac-sim
   isaac-cache-kit:
   isaac-cache-ov:
   isaac-cache-pip:
@@ -167,7 +146,6 @@ volumes:
   isaac-carb-logs:
   isaac-data:
   isaac-docs:
-  # isaac-lab
   isaac-lab-docs:
   isaac-lab-logs:
   isaac-lab-data:
