--- a/docker/Dockerfile.harry
+++ b/docker/Dockerfile.harry
@@ -1,30 +1,39 @@
-# Start from base Isaac Lab image
-FROM isaac-lab-base AS harry
+ARG DOCKER_NAME_SUFFIX=""
 
-# Set default RUN shell to bash
-SHELL ["/bin/bash", "-c"]
+FROM isaac-lab-base${DOCKER_NAME_SUFFIX} AS harry
 
-# Metadata
-LABEL version="1.0"
-LABEL description="Custom Harry profile for IsaacLab"
+# --------------------------------------------------
+# Set environment variable defaults
+# --------------------------------------------------
+ENV ISAACLAB_PATH=/workspace/isaaclab
 
-# Inherit ENV args (used in isaaclab.sh)
-ARG ISAACLAB_PATH_ARG
-ENV ISAACLAB_PATH=${ISAACLAB_PATH_ARG}
-ARG DOCKER_USER_HOME_ARG
-ENV DOCKER_USER_HOME=${DOCKER_USER_HOME_ARG}
+# --------------------------------------------------
+# Install minimal apt + Python deps
+# --------------------------------------------------
+RUN --mount=type=cache,target=/var/cache/apt \
+    apt-get update && \
+    apt-get install -y --no-install-recommends \
+        python3 \
+        python3-pip \
+        git \
+    && python3 -m pip install --no-cache-dir --upgrade pip setuptools wheel toml \
+    && apt -y autoremove && \
+    apt clean autoclean && \
+    rm -rf /var/lib/apt/lists/*
 
-# Upgrade pip + install latest PyTorch nightly for CUDA 12.8
-RUN ${ISAACLAB_PATH}/_isaac_sim/python.sh -m pip install --upgrade pip && \
-    ${ISAACLAB_PATH}/_isaac_sim/python.sh -m pip install --pre torch torchvision --index-url https://download.pytorch.org/whl/nightly/cu128
+# --------------------------------------------------
+# Install extra Python packages
+# --------------------------------------------------
+RUN pip install scikit-learn
 
-# Optionally: Install any custom packages here
-# RUN ${ISAACLAB_PATH}/_isaac_sim/python.sh -m pip install -e ${ISAACLAB_PATH}/source/chills
+# --------------------------------------------------
+# Install your `chills` repo in editable mode
+# --------------------------------------------------
+WORKDIR ${ISAACLAB_PATH}/source/chills
+RUN pip install -e .
 
-# Set up aliases
-RUN echo "alias isaaclab=${ISAACLAB_PATH}/isaaclab.sh" >> ${HOME}/.bashrc && \
-    echo "alias python=${ISAACLAB_PATH}/_isaac_sim/python.sh" >> ${HOME}/.bashrc && \
-    echo "alias pip='${ISAACLAB_PATH}/_isaac_sim/python.sh -m pip'" >> ${HOME}/.bashrc
-
-# Working directory
-WORKDIR ${ISAACLAB_PATH}
+# --------------------------------------------------
+# (Optional) Git fetch if developing inside container
+# --------------------------------------------------
+WORKDIR ${ISAACLAB_PATH}/source/chills/chills
+RUN git fetch --all || true
