--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -33,21 +33,21 @@ x-default-isaac-lab-volumes: &default-isaac-lab-volumes
   - type: bind
     source: ../scripts
     target: ${DOCKER_ISAACLAB_PATH}/scripts
-  - type: bind
-    source: ../docs
-    target: ${DOCKER_ISAACLAB_PATH}/docs
+  # - type: bind
+  #   source: ../docs
+  #   target: ${DOCKER_ISAACLAB_PATH}/docs
   - type: bind
     source: ../tools
     target: ${DOCKER_ISAACLAB_PATH}/tools
-  - type: volume
-    source: isaac-lab-docs
-    target: ${DOCKER_ISAACLAB_PATH}/docs/_build
+  # - type: volume
+  #   source: isaac-lab-docs
+  #   target: ${DOCKER_ISAACLAB_PATH}/docs/_build
   - type: volume
     source: isaac-lab-logs
     target: ${DOCKER_ISAACLAB_PATH}/logs
-  - type: volume
-    source: isaac-lab-data
-    target: ${DOCKER_ISAACLAB_PATH}/data_storage
+  # - type: volume
+  #   source: isaac-lab-data
+  #   target: ${DOCKER_ISAACLAB_PATH}/data_storage
   - type: bind
     source: /usr/share/nvidia/nvoptix.bin
     target: /usr/share/nvidia/nvoptix.bin
@@ -92,20 +92,19 @@ services:
       - /dev/hidraw3:/dev/hidraw3
 
 
-  isaac-lab-ros2:
-    profiles: [ "ros2" ]
-    env_file:
-      - .env.base
-      - .env.ros2
+  isaac-lab-harry:
+    profiles: [ "harry" ]
+    env_file: .env.harry
     build:
       context: ../
-      dockerfile: docker/Dockerfile.ros2
-      args:
-        - ROS2_APT_PACKAGE=${ROS2_APT_PACKAGE:-NONE}
-    image: isaac-lab-ros2
-    container_name: isaac-lab-ros2
+      dockerfile: docker/Dockerfile.harry
+      # args:
+        # - harry_APT_PACKAGE=${harry_APT_PACKAGE:-NONE}
+    image: isaac-lab-harry
+    # user: "${UID}:${GID}"
+    container_name: isaac-lab-harry
     environment: *default-isaac-lab-environment
-    volumes: *default-isaac-lab-volumes
+    volumes:  *default-isaac-lab-volumes
     network_mode: host
     deploy: *default-isaac-lab-deploy
     entrypoint: bash
@@ -113,29 +112,7 @@ services:
     tty: true
     devices:
       - /dev/hidraw3:/dev/hidraw3
-
     
-  isaac-lab-harry:
-    profiles: [ "harry" ]
-    env_file:
-      - .env.base
-      - .env.harry
-    build:
-      context: ../
-      dockerfile: docker/Dockerfile.harry
-      args:
-      - ISAACLAB_PATH_ARG=${DOCKER_ISAACLAB_PATH}
-      - DOCKER_USER_HOME_ARG=${DOCKER_USER_HOME}
-    image: isaac_container
-    container_name: isaac-lab-harry
-    environment: *default-isaac-lab-environment
-    volumes: *default-isaac-lab-volumes
-    network_mode: host
-    deploy: *default-isaac-lab-deploy
-    entrypoint: bash
-    stdin_open: true
-    tty: true
-
 volumes:
   isaac-cache-kit:
   isaac-cache-ov:
