--- a/source/isaaclab_rl/config/extension.toml
+++ b/source/isaaclab_rl/config/extension.toml
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
 [package]
 
 # Note: Semantic Versioning is used: https://semver.org/
@@ -8,73 +5,19 @@ version = "0.1.8"
 
 # Description
 title = "Isaac Lab RL"
-description="Extension containing reinforcement learning related utilities."
-readme  = "docs/README.md"
+description = "Extension containing reinforcement learning related utilities."
+readme = "docs/README.md"
 repository = "https://github.com/isaac-sim/IsaacLab"
 category = "robotics"
 keywords = ["robotics", "rl", "wrappers", "learning"]
 
 [dependencies]
-"isaaclab" = {}
-"isaaclab_assets" = {}
-"isaaclab_tasks" = {}
+isaaclab = {}
+isaaclab_assets = {}
+isaaclab_tasks = {}
 
 [core]
 reloadable = false
 
 [[python.module]]
 name = "isaaclab_rl"
-=======
->>>>>>> d6a958f75e8709dbc47441339e9f43b0aff891ce
-[package]
-
-# Note: Semantic Versioning is used: https://semver.org/
-version = "0.1.6"
-
-# Description
-title = "Isaac Lab RL"
-description="Extension containing reinforcement learning related utilities."
-readme  = "docs/README.md"
-repository = "https://github.com/isaac-sim/IsaacLab"
-category = "robotics"
-keywords = ["robotics", "rl", "wrappers", "learning"]
-
-[dependencies]
-"isaaclab" = {}
-"isaaclab_assets" = {}
-"isaaclab_tasks" = {}
-
-[core]
-reloadable = false
-
-[[python.module]]
-name = "isaaclab_rl"
-<<<<<<< HEAD
-=======
-[package]
-
-# Note: Semantic Versioning is used: https://semver.org/
-version = "0.1.8"
-
-# Description
-title = "Isaac Lab RL"
-description="Extension containing reinforcement learning related utilities."
-readme  = "docs/README.md"
-repository = "https://github.com/isaac-sim/IsaacLab"
-category = "robotics"
-keywords = ["robotics", "rl", "wrappers", "learning"]
-
-[dependencies]
-"isaaclab" = {}
-"isaaclab_assets" = {}
-"isaaclab_tasks" = {}
-
-[core]
-reloadable = false
-
-[[python.module]]
-name = "isaaclab_rl"
->>>>>>> upstream/main
-=======
->>>>>>> harry/main
->>>>>>> d6a958f75e8709dbc47441339e9f43b0aff891ce
