--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -105,7 +105,7 @@ services:
     devices:
     - /dev/hidraw0:/dev/hidraw0
     - /dev/hidraw1:/dev/hidraw1
-    #- /dev/hidraw2:/dev/hidraw2
+    - /dev/hidraw2:/dev/hidraw2
 
   # This service adds a ROS2 Humble
   # installation on top of the base image
@@ -135,7 +135,7 @@ services:
     devices:
     - /dev/hidraw0:/dev/hidraw0
     - /dev/hidraw1:/dev/hidraw1
-   # - /dev/hidraw2:/dev/hidraw2
+    - /dev/hidraw2:/dev/hidraw2
     
 
 
