--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -3,7 +3,8 @@
 # extension field
 # https://docs.docker.com/compose/compose-file/compose-file-v3/#extension-fields
 x-default-isaac-lab-volumes: &default-isaac-lab-volumes
-  # Persistent Omniverse/IsaacSim caches
+  # These volumes follow from this page
+  # https://docs.omniverse.nvidia.com/app_isaacsim/app_isaacsim/install_faq.html#save-isaac-sim-configs-on-local-disk
   - type: volume
     source: isaac-cache-kit
     target: ${DOCKER_ISAACSIM_ROOT_PATH}/kit/cache
@@ -31,8 +32,8 @@ x-default-isaac-lab-volumes: &default-isaac-lab-volumes
   - type: volume
     source: isaac-docs
     target: ${DOCKER_USER_HOME}/Documents
-
-  # Overlay for live code, tools, and docs
+    # This overlay allows changes on the local files to
+    # be reflected within the container immediately
   - type: bind
     source: ../source
     target: ${DOCKER_ISAACLAB_PATH}/source
@@ -45,8 +46,11 @@ x-default-isaac-lab-volumes: &default-isaac-lab-volumes
   - type: bind
     source: ../tools
     target: ${DOCKER_ISAACLAB_PATH}/tools
-
-  # Persistent lab build/logs/data—keeps artifacts non-root
+    # The effect of these volumes is twofold:
+    # 1. Prevent root-owned files from flooding the _build and logs dir
+    #    on the host machine
+    # 2. Preserve the artifacts in persistent volumes for later copying
+    #    to the host machine
   - type: volume
     source: isaac-lab-docs
     target: ${DOCKER_ISAACLAB_PATH}/docs/_build
@@ -56,13 +60,7 @@ x-default-isaac-lab-volumes: &default-isaac-lab-volumes
   - type: volume
     source: isaac-lab-data
     target: ${DOCKER_ISAACLAB_PATH}/data_storage
-
-  # Store bash history (host/local dotfile)
-  - type: bind
-    source: .isaac-lab-docker-history
-    target: ${DOCKER_USER_HOME}/.bash_history
-
-  # NVIDIA OptiX (raytracing) for hardware accel
+    # pull in nvoptix 
   - type: bind
     source: /usr/share/nvidia/nvoptix.bin
     target: /usr/share/nvidia/nvoptix.bin
@@ -81,7 +79,7 @@ x-default-isaac-lab-deploy: &default-isaac-lab-deploy
           capabilities: [ gpu ]
 
 services:
-  # Base Isaac Lab image
+  # This service is the base Isaac Lab image
   isaac-lab-base:
     profiles: [ "base" ]
     env_file: .env.base
@@ -100,15 +98,17 @@ services:
     volumes: *default-isaac-lab-volumes
     network_mode: host
     deploy: *default-isaac-lab-deploy
+    # This is the entrypoint for the container
     entrypoint: bash
     stdin_open: true
     tty: true
     devices:
-      - /dev/hidraw0:/dev/hidraw0
-      - /dev/hidraw1:/dev/hidraw1
-      # - /dev/hidraw2:/dev/hidraw2
+    - /dev/hidraw0:/dev/hidraw0
+    - /dev/hidraw1:/dev/hidraw1
+    - /dev/hidraw2:/dev/hidraw2
 
-  # ROS2 on top of base image
+  # This service adds a ROS2 Humble
+  # installation on top of the base image
   isaac-lab-ros2:
     profiles: [ "ros2" ]
     env_file:
@@ -118,6 +118,9 @@ services:
       context: ../
       dockerfile: docker/Dockerfile.ros2
       args:
+        # ROS2_APT_PACKAGE will default to NONE. This is to
+        # avoid a warning message when building only the base profile
+        # with the .env.base file
         - ROS2_APT_PACKAGE=${ROS2_APT_PACKAGE:-NONE}
     image: isaac-lab-ros2
     container_name: isaac-lab-ros2
@@ -125,34 +128,19 @@ services:
     volumes: *default-isaac-lab-volumes
     network_mode: host
     deploy: *default-isaac-lab-deploy
+    # This is the entrypoint for the container
     entrypoint: bash
     stdin_open: true
     tty: true
     devices:
-      - /dev/hidraw0:/dev/hidraw0
-      - /dev/hidraw1:/dev/hidraw1
-      # - /dev/hidraw2:/dev/hidraw2
-
-  # Harry's custom IsaacLab variant
-  isaac-lab-harry:
-    profiles: [ "harry" ]
-    env_file: .env.harry
-    build:
-      context: ../
-      dockerfile: docker/Dockerfile.harry
-    image: isaac-lab-harry
-    container_name: isaac-lab-harry
-    environment: *default-isaac-lab-environment
-    volumes: *default-isaac-lab-volumes
-    network_mode: host
-    deploy: *default-isaac-lab-deploy
-    entrypoint: bash
-    stdin_open: true
-    tty: true
-    devices:
-      - /dev/hidraw3:/dev/hidraw3
+    - /dev/hidraw0:/dev/hidraw0
+    - /dev/hidraw1:/dev/hidraw1
+    - /dev/hidraw2:/dev/hidraw2
+ 
 
 volumes:
+
+  # isaac-sim
   isaac-cache-kit:
   isaac-cache-ov:
   isaac-cache-pip:
@@ -162,6 +150,7 @@ volumes:
   isaac-carb-logs:
   isaac-data:
   isaac-docs:
+  # isaac-lab
   isaac-lab-docs:
   isaac-lab-logs:
   isaac-lab-data:
