--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 **/*.usda
 **/*.usdc
 **/*.usdz
+**/*.hdf5
 
 # Python
 .DS_Store
@@ -66,6 +67,7 @@ datasets
 
 # path 
 docs/training_runs
+**/*.pth
 
 # Tests
 tests/
