--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "source/chills"]
     path = source/chills
-    url = git@github.com:aarch-uol/IsaacChills.git
+    url = https://github.com/aarch-uol/IsaacChills.git
