testing some ros2 builds

--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -44,6 +44,7 @@ RUN --mount=type=cache,target=/var/cache/apt \
     git \
     libglib2.0-0 \
     ncurses-term \
+    qt5-qmake \
     wget && \
     apt -y autoremove && apt clean autoclean && \
     rm -rf /var/lib/apt/lists/*
