--- a/source/isaaclab/isaaclab/ros2/src/message_server/CMakeLists.txt
+++ b/source/isaaclab/isaaclab/ros2/src/message_server/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(demo)
+project(message_server)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -7,9 +7,10 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(example_interfaces REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -22,5 +23,17 @@ if(BUILD_TESTING)
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "srv/GetLatestMessage.srv"
+)
+add_executable(message_server_node src/message_server.cpp)
+ament_target_dependencies(message_server_node rclcpp std_msgs)
+rosidl_target_interfaces(message_server_node
+  ${PROJECT_NAME} "rosidl_typesupport_cpp")
+
+install(TARGETS message_server_node
+  DESTINATION lib/${PROJECT_NAME})
+
+ament_export_dependencies(rosidl_default_runtime)
 
 ament_package()
