--- a/.meta/docker/docker-compose.yaml
+++ b/.meta/docker/docker-compose.yaml
@@ -42,7 +42,7 @@ x-default-isaac-lab-volumes: &default-isaac-lab-volumes
     target: ${DOCKER_ISAACLAB_PATH}/scripts
   - type: bind
     source: ../docs
-    target: ${DOCKER_ISAACLAB_PATH}/.meta/docs
+    target: ${DOCKER_ISAACLAB_PATH}/docs
   - type: bind
     source: ../tools
     target: ${DOCKER_ISAACLAB_PATH}/tools
@@ -53,7 +53,7 @@ x-default-isaac-lab-volumes: &default-isaac-lab-volumes
     #    to the host machine
   - type: volume
     source: isaac-lab-docs
-    target: ${DOCKER_ISAACLAB_PATH}/.meta/docs/_build
+    target: ${DOCKER_ISAACLAB_PATH}/docs/_build
   - type: volume
     source: isaac-lab-logs
     target: ${DOCKER_ISAACLAB_PATH}/logs
