short handed argsparser to mods, ToDo yeet the rest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,8 +75,8 @@ exclude = [
     ".vscode",
 ]
 
-typeCheckingMode = "basic"
-pythonVersion = "3.11"
+typeCheckingMode = "off"
+pythonVersion = "3.10"
 pythonPlatform = "Linux"
 enableTypeIgnoreComments = true
 
