--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 **/.thumbs
 
 # No USD files allowed in the repo
-**/*.usd
+# **/*.usd
 **/*.usda
 **/*.usdc
 **/*.usdz
@@ -21,6 +21,7 @@
 **/.pytest_cache/
 **/*.pyc
 **/*.pb
+.chillsVenv/
 
 # Docker/Singularity
 **/*.sif
