--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -104,7 +104,7 @@ services:
     tty: true
     devices:
       - /dev/hidraw3:/dev/hidraw3
-      - /dev/hidraw4:/dev/hidraw4
+      # - /dev/hidraw4:/dev/hidraw4
       #- /dev/hidraw5:/dev/hidraw5
 
   # This service adds a ROS2 Humble
