--- a/docker/Dockerfile.ros2
+++ b/docker/Dockerfile.ros2
@@ -4,7 +4,7 @@
 # What is the docker name suffix for the base image to load? (defaults to empty string)
 ARG DOCKER_NAME_SUFFIX=""
 
-FROM isaac-lab-base${DOCKER_NAME_SUFFIX} AS ros2
+FROM isaac-lab-base AS ros2
 
 # Which ROS2 apt package to install
 ARG ROS2_APT_PACKAGE
